--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <div class="details_grid">
               <div class="banner">
                 <div class="banner_overlay">
-                  <img src="/img/HADEF.png" alt="HADEF" />
+                  <img src="./img/HADEF.png" alt="HADEF" />
                 </div>
               </div>
               <article class="description_container">
