--- a/index.html
+++ b/index.html
@@ -7,25 +7,36 @@
     <title>HEP Dz 1.1</title>
   </head>
   <body>
-    <main>
-      <header>
-        <div class="overlay">
-          <div class="logo">
-            <img src="./img/LOGO.png" alt="Logo" />
-          </div>
-          <nav>
-            <ul>
-              <li><a href="#Home">Home</a></li>
-              <li><a href="#Marque">Marque</a></li>
-              <li><a href="#Historique">Historique</a></li>
-              <li><a href="#Contact">Contact</a></li>
-            </ul>
-          </nav>
-          <button class="boutique"><a href="#">Boutique</a></button>
+    <header>
+      <div class="overlay">
+        <div class="logo">
+          <img src="./img/LOGO.png" alt="Logo" />
         </div>
-      </header>
+        <nav>
+          <ul>
+            <li><a href="#Home">Home</a></li>
+            <li><a href="#Marque">Marque</a></li>
+            <li><a href="#Historique">Historique</a></li>
+            <li><a href="#Contact">Contact</a></li>
+          </ul>
+        </nav>
+        <button class="boutique"><a href="#">Boutique</a></button>
+      </div>
+    </header>
+    <main>
       <section id="Home" class="Home">
-        <div class="overlay"></div>
+        <div class="overlay">
+          <div class="titre_container">
+            <div class="titre_site">
+              <h1>HEP.</h1>
+              <hr />
+            </div>
+            <cite class="citation">
+              Par ce que la confiance ne s’accorde qu’aux professionnels.
+            </cite>
+            <h2 class="sous_titre_site">Haddad Équipement Professionnel</h2>
+          </div>
+        </div>
       </section>
       <section id="Marque" class="Marque">
         <div class="overlay">
@@ -161,56 +172,53 @@
       <section>
         <section id="Slogon" class="slogon">
           <div class="overlay">
-            <hr />
-
             <h5>
-              &emsp;&ensp;« Par ce que la confiance ne s’accorde qu’aux professionnels, nous
-              vous proposons des produits de haute qualité afin de vous garantir
-              une sécurité et facilité de travaille. »
+              &emsp;&ensp;«Par ce que la confiance ne s’accorde qu’aux
+              professionnels, nous vous proposons des produits de haute qualité
+              afin de vous garantir une sécurité et facilité de travaille.»
             </h5>
-            <hr />
           </div>
         </section>
       </section>
       <section class="blanc"></section>
       <section id="Historique" class="Historique">
         <div class="overlay">
-          <hr />
           <article>
-            &emsp;&ensp;« Inspirée d'un héritage familial, Haddad Équipement professionnel
-            verra officiellement le jour en Mars 2000. L’entreprise héritera de
-            2 partenaires leaders dans leur domaine dans le marché de
-            l’outillage Professionnel ALLEMAND ;METABOet STIHLdont nous tenons
-            l’exclusivité sur tout le marché algérien. : Bien que nous avions un
-            positionnement haut de gamme sur le marché de l’outillage, Nous ne
-            nous sommes pasarrêtéslà, nous avons eu l’exclusivité de deux autres
-            marques leader Allemande ; STABILA etHADEF; Depuis l’entreprise n'a
-            cessé de se développer. Nous travaillons de façons à procurer aux
-            professionnels comme au particuliers des produits de hautes gammes
-            afin qu’ils puissent travaillez confortablement en toute sécurité en
-            leurs garantissant un suivi et un service après-vente à leur
-            disposition avec des pièces de rechanges d’origine. »
+            &emsp;&ensp;« Inspirée d'un héritage familial, Haddad Équipement
+            professionnel verra officiellement le jour en Mars 2000.
+            L’entreprise héritera de 2 partenaires leaders dans leur domaine
+            dans le marché de l’outillage Professionnel ALLEMAND ;METABOet
+            STIHLdont nous tenons l’exclusivité sur tout le marché algérien. :
+            Bien que nous avions un positionnement haut de gamme sur le marché
+            de l’outillage, Nous ne nous sommes pasarrêtéslà, nous avons eu
+            l’exclusivité de deux autres marques leader Allemande ; STABILA
+            etHADEF; Depuis l’entreprise n'a cessé de se développer. Nous
+            travaillons de façons à procurer aux professionnels comme au
+            particuliers des produits de hautes gammes afin qu’ils puissent
+            travaillez confortablement en toute sécurité en leurs garantissant
+            un suivi et un service après-vente à leur disposition avec des
+            pièces de rechanges d’origine. »
           </article>
           <hr />
           <cite>Haddad Rabah</cite>
         </div>
       </section>
-      <footer id="Contact" class="Contact">
-        <div class="overlay">
-          <ul>
-            <li>
-              <a href="#">
-                <b> Addresse:</b> Cité Brancy 21, Gpr Propriété 228 N 02 Local
-                03 Rouiba – Alger
-              </a>
-            </li>
-            <li><b>Email:</b>contact@hep-dz.com</li>
-            <li><b>Mobile:</b> 0554 512 321</li>
-          </ul>
-          <div>Copyright © 2020 – HEP. Tous droit réservés .</div>
-        </div>
-      </footer>
     </main>
+    <footer id="Contact" class="Contact">
+      <div class="overlay">
+        <ul>
+          <li>
+            <a href="#">
+              <b> Addresse:</b> Cité Brancy 21, Gpr Propriété 228 N 02 Local 03
+              Rouiba – Alger
+            </a>
+          </li>
+          <li><b>Email:</b>contact@hep-dz.com</li>
+          <li><b>Mobile:</b> 0554 512 321</li>
+        </ul>
+        <div>Copyright © 2020 – HEP. Tous droit réservés .</div>
+      </div>
+    </footer>
     <script src="thescript.js"></script>
   </body>
 </html>
