--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Haddad Equipement professionnel" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="keywords" content="HEP, METABO, STABILA, HADEF, STIHL" />
     <link rel="stylesheet" href="./style.css" />
-    <title>HEP Dz 1.1</title>
+    <title>HEP DZ</title>
   </head>
   <body>
     <header>
@@ -14,13 +16,15 @@
         </div>
         <nav>
           <ul>
-            <li><a href="#Home">Home</a></li>
-            <li><a href="#Marque">Marque</a></li>
+            <li><a href="#Home">Accueil</a></li>
+            <li><a href="#Marque">Nos Marque</a></li>
             <li><a href="#Historique">Historique</a></li>
             <li><a href="#Contact">Contact</a></li>
           </ul>
         </nav>
-        <button class="boutique"><a href="#">Boutique</a></button>
+        <button class="boutique">
+          <a href="https://hep-dz.com/shop/">Boutique</a>
+        </button>
       </div>
     </header>
     <main>
@@ -34,21 +38,21 @@
             <cite class="citation">
               Par ce que la confiance ne s’accorde qu’aux professionnels.
             </cite>
-            <h2 class="sous_titre_site">Haddad Équipement Professionnel</h2>
+            <h2 class="sous_titre_site">Haddad Équipement Professionnels</h2>
           </div>
         </div>
       </section>
       <section id="Marque" class="Marque">
         <div class="overlay">
           <div id="Product_container" class="product_container">
-            <div onclick="view_STABILA()" id="STABILA" class="product">
-              <img src="./img/STABILA.png" alt="STABILA" />
-            </div>
             <div onclick="view_METABO()" id="METABO" class="product">
               <img src="./img/METABO.jpg" alt="METABO" />
             </div>
             <div onclick="view_STIHL()" id="STIHL" class="product">
               <img src="./img/STIHL.png" alt="STIHL" />
+            </div>
+            <div onclick="view_STABILA()" id="STABILA" class="product">
+              <img src="./img/STABILA.png" alt="STABILA" />
             </div>
             <div onclick="view_HADEF()" id="HADEF" class="product">
               <img src="./img/HADEF.png" alt="HADEF" />
@@ -58,33 +62,6 @@
       </section>
       <section id="Product_details" class="Product_details">
         <div class="overlay">
-          <div id="STABILA_details" class="details">
-            <div class="details_grid">
-              <div class="banner">
-                <div class="banner_overlay">
-                  <img src="./img/STABILA.png" alt="STABILA" />
-                </div>
-              </div>
-              <article class="description_container">
-                <h2 class="titre">STABILA</h2>
-                <h3 class="sous_titre">
-                  STABILA est un fabricant majeur et réputé d’outils de mesure
-                  de marque de la meilleure qualité existant depuis 1865
-                </h3>
-                <p class="description">
-                  la marque STABILA est N°1 de nombreux marchés dans des
-                  domaines majeurs des techniques de mesure grâce a leur
-                  technique moderne de fabrication.
-                </p>
-              </article>
-              <button class="voirplus_btn"><a href="#">Boutique</a></button>
-              <ul class="product_variants">
-                <li><img src="./img/STABILA_p1.jpeg" alt="product" /></li>
-                <li><img src="./img/STABILA_p2.jpeg" alt="product" /></li>
-                <li><img src="./img/STABILA_p3.jpeg" alt="product" /></li>
-              </ul>
-            </div>
-          </div>
           <div id="METABO_details" class="details">
             <div class="details_grid">
               <div class="banner">
@@ -142,6 +119,33 @@
               </ul>
             </div>
           </div>
+          <div id="STABILA_details" class="details">
+            <div class="details_grid">
+              <div class="banner">
+                <div class="banner_overlay">
+                  <img src="./img/STABILA.png" alt="STABILA" />
+                </div>
+              </div>
+              <article class="description_container">
+                <h2 class="titre">STABILA</h2>
+                <h3 class="sous_titre">
+                  STABILA est un fabricant majeur et réputé d’outils de mesure
+                  de marque de la meilleure qualité existant depuis 1865
+                </h3>
+                <p class="description">
+                  la marque STABILA est N°1 de nombreux marchés dans des
+                  domaines majeurs des techniques de mesure grâce a leur
+                  technique moderne de fabrication.
+                </p>
+              </article>
+              <button class="voirplus_btn"><a href="#">Boutique</a></button>
+              <ul class="product_variants">
+                <li><img src="./img/STABILA_p1.jpeg" alt="product" /></li>
+                <li><img src="./img/STABILA_p2.jpeg" alt="product" /></li>
+                <li><img src="./img/STABILA_p3.jpeg" alt="product" /></li>
+              </ul>
+            </div>
+          </div>
           <div id="HADEF_details" class="details">
             <div class="details_grid">
               <div class="banner">
@@ -187,17 +191,19 @@
             &emsp;&ensp;« Inspirée d'un héritage familial, Haddad Équipement
             professionnel verra officiellement le jour en Mars 2000.
             L’entreprise héritera de 2 partenaires leaders dans leur domaine
-            dans le marché de l’outillage Professionnel ALLEMAND ;METABOet
-            STIHLdont nous tenons l’exclusivité sur tout le marché algérien. :
+            dans le marché de l’outillage Professionnel ALLEMAND: METABO et
+            STIHL dont nous tenons l’exclusivité sur tout le marché algérien.
+            <br />
             Bien que nous avions un positionnement haut de gamme sur le marché
             de l’outillage, Nous ne nous sommes pasarrêtéslà, nous avons eu
-            l’exclusivité de deux autres marques leader Allemande ; STABILA
-            etHADEF; Depuis l’entreprise n'a cessé de se développer. Nous
-            travaillons de façons à procurer aux professionnels comme au
-            particuliers des produits de hautes gammes afin qu’ils puissent
-            travaillez confortablement en toute sécurité en leurs garantissant
-            un suivi et un service après-vente à leur disposition avec des
-            pièces de rechanges d’origine. »
+            l’exclusivité de deux autres marques leader Allemande: STABILA et
+            HADEF. <br />
+            Depuis l’entreprise n'a cessé de se développer. Nous travaillons de
+            façons à procurer aux professionnels comme au particuliers des
+            produits de hautes gammes afin qu’ils puissent travaillez
+            confortablement en toute sécurité en leurs garantissant un suivi et
+            un service après-vente à leur disposition avec des pièces de
+            rechanges d’origine. »
           </article>
           <hr />
           <cite>Haddad Rabah</cite>
@@ -206,17 +212,60 @@
     </main>
     <footer id="Contact" class="Contact">
       <div class="overlay">
-        <ul>
-          <li>
-            <a href="#">
-              <b> Addresse:</b> Cité Brancy 21, Gpr Propriété 228 N 02 Local 03
+        <div class="footer_logo">
+          <img src="./img/LOGO_white.png" alt="logo" />
+          <h6>Haddad Equipement Professionnels</h6>
+          <p>
+            Haddad Equipement Professionnel est une entreprise spécialisée dans
+            l’importation d’outillage professionnel d’origine allemande.
+            Inspirée d’un héritage familial, l’entreprise voit sa création en
+            2000 avec un positionnement haut de gamme sur le marché de
+            l’outillage électrique.
+          </p>
+        </div>
+        <iframe
+          src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12789.428485306431!2d3.3035208!3d36.7379982!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x59f8712b6d088efd!2sEurl%20HEP!5e0!3m2!1sfr!2sdz!4v1611767929233!5m2!1sfr!2sdz"
+          width="100%"
+          height="120%"
+          frameborder="0"
+          style="border: 0"
+          allowfullscreen=""
+          aria-hidden="false"
+          tabindex="0"
+        ></iframe>
+        <div claappareilss="menu">
+          <ul>
+            <li><a href="#">Voir la boutique</a></li>
+            <li><a href="#">News letter</a></li>
+          </ul>
+        </div>
+        <div class="Contact_info">
+          <ul>
+            <li>
+              <b>Addresse:</b> Cité Brancy 21, Gpr Propriété 228 N 02 Local 03
               Rouiba – Alger
-            </a>
-          </li>
-          <li><b>Email:</b>contact@hep-dz.com</li>
-          <li><b>Mobile:</b> 0554 512 321</li>
-        </ul>
-        <div>Copyright © 2020 – HEP. Tous droit réservés .</div>
+            </li>
+            <li><b>Email:</b> contact@hep-dz.com</li>
+            <li><b>Mobile:</b> 0554 512 321</li>
+          </ul>
+        </div>
+        <nav class="social_media">
+          <hr />
+          <ul>
+            <li>
+              <a href="#"><img src="./img/facebook.png" alt="facebook" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/instagram.png" alt="intagram" /></a>
+            </li>
+            <li>
+              <a href="#"><img src="./img/linkedin.png" alt="linkedin" /></a>
+            </li>
+          </ul>
+        </nav>
+        <p class="Copyrights">
+          Copyright © 2021 – <b>HEP.</b> Tous droit réservés.
+        </p>
       </div>
     </footer>
     <script src="thescript.js"></script>
