--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>HEP DZ</title>
   </head>
   <body>
+    <input type="checkbox" id="side_menu" />
+    <img class="img_menu" src="./img/menu.png" alt="menu" />
     <header>
       <div class="overlay">
         <div class="logo">
@@ -27,19 +29,37 @@
         </button>
       </div>
     </header>
+    <nav class="mobile_topbar">
+      <div class="logo">
+        <img src="./img/LOGO.png" alt="Logo" />
+      </div>
+
+      <button class="boutique">
+        <a href="https://hep-dz.com/shop/">Boutique</a>
+      </button>
+    </nav>
     <main>
       <section id="Home" class="Home">
-        <div class="overlay">
-          <div class="titre_container">
-            <div class="titre_site">
-              <h1>HEP.</h1>
-              <hr />
+        <div id="slider">
+          <div class="overlay">
+            <div class="titre_container">
+              <div class="titre_site">
+                <h1>HEP.</h1>
+                <hr />
+              </div>
+              <cite class="citation">
+                Par ce que la confiance ne s’accorde qu’aux professionnels.
+              </cite>
+              <h2 class="sous_titre_site">Haddad Équipement Professionnels</h2>
             </div>
-            <cite class="citation">
-              Par ce que la confiance ne s’accorde qu’aux professionnels.
-            </cite>
-            <h2 class="sous_titre_site">Haddad Équipement Professionnels</h2>
           </div>
+          <figure>
+            <div class="img s1"></div>
+            <div class="img s2"></div>
+            <div class="img s3"></div>
+            <div class="img s4"></div>
+            <div class="img s5"></div>
+          </figure>
         </div>
       </section>
       <section id="Marque" class="Marque">
@@ -172,7 +192,23 @@
           </div>
         </div>
       </section>
-      <section class="blanc"></section>
+      <section class="blanc_q">
+        <div class="d_v">
+          <h2>Lorem ipsum dolor sit.</h2>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Necessitatibus, vitae!
+        </div>
+        <div class="d_v">
+          <h2>Lorem ipsum dolor sit.</h2>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Necessitatibus, vitae!
+        </div>
+        <div class="d_v">
+          <h2>Lorem ipsum dolor sit.</h2>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+          Necessitatibus, vitae!
+        </div>
+      </section>
       <section>
         <section id="Slogon" class="slogon">
           <div class="overlay">
