--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
           </figure>
         </div>
       </section>
+      <section id="blanc" class="section">
+        <div class="overlay"></div>
+      </section>
       <section id="Marque" class="section">
         <div class="overlay">
           <div class="produit">
@@ -230,6 +233,9 @@
           </article>
         </div>
       </section>
+      <section id="blanc" class="section">
+        <div class="overlay"></div>
+      </section>
     </main>
     <footer id="Contact">
       <div class="f_s1">
@@ -260,11 +266,18 @@
         <div class="contact_info">
           <ul>
             <li>
-              <b>Addresse:</b> Cité Brancy 21, Gpr Propriété 228 N 02 Local 03
-              Rouiba – Alger
+              <i class="fas fa-map-marker-alt"></i
+              ><b class="b_contact">Addresse:</b> Cité Brancy 21, Gpr Propriété
+              228 N 02 Local 03 Rouiba – Alger
             </li>
-            <li><b>Email:</b> contact@hep-dz.com</li>
-            <li><b>Mobile:</b> 0554 512 321</li>
+            <li>
+              <i class="fas fa-envelope-open-text"></i
+              ><b class="b_contact">Email:</b> contact@hep-dz.com
+            </li>
+            <li>
+              <i class="fas fa-mobile-alt"></i
+              ><b class="b_contact">Mobile:</b> 0554 512 321
+            </li>
           </ul>
         </div>
       </div>
@@ -287,7 +300,9 @@
             <a href="#"><i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
-        <p class="copyrights">Copyright © 2021 – <b>HEP.</b> Tous droit réservés.</p>
+        <p class="copyrights">
+          Copyright © 2021 – <b>HEP.</b> Tous droit réservés.
+        </p>
       </div>
     </footer>
   </body>
