--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HEP DZ</title>
-    <link rel="stylesheet" href="./style.css" />
     <script
       src="https://kit.fontawesome.com/018cd19312.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
     <header>
+      <input type="checkbox" id="menu_bar" autocomplete="off" />
+      <label for="menu_bar"><i class="fas fa-bars"></i></label>
       <div class="logo"><img src="./img/logo_header.png" alt="logo" /></div>
-      <nav>
+      <nav class="sidemenu">
         <ul>
           <li class="nav_links"><a href="#Accueil">Accueil</a></li>
           <li class="nav_links"><a href="#Marque">Nos Marques</a></li>
@@ -119,9 +121,9 @@
               </article>
               <a class="boutique" href="#">Boutique</a>
               <ul class="variantes">
-                <li><img src="./img/STABILA_V1.jpeg" alt="variantes" /></li>
-                <li><img src="./img/STABILA_V2.jpeg" alt="variantes" /></li>
-                <li><img src="./img/STABILA_V3.jpeg" alt="variantes" /></li>
+                <li><img src="./img/STIHL_V1.jpeg" alt="variantes" /></li>
+                <li><img src="./img/STIHL_V2.jpeg" alt="variantes" /></li>
+                <li><img src="./img/STIHL_V3.jpeg" alt="variantes" /></li>
               </ul>
             </div>
           </div>
