--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           </figure>
         </div>
       </section>
-      <section id="blanc" class="section">
+      <section id="blanc" class="section b1">
         <div class="overlay"></div>
       </section>
       <section id="Marque" class="section">
@@ -206,7 +206,7 @@
           <b>sécurité</b> et une facilité de travaille.
         </h5>
       </section>
-      <section id="blanc" class="section">
+      <section id="blanc" class="section b2">
         <div class="overlay"></div>
       </section>
       <section id="Historique" class="section">
@@ -235,7 +235,7 @@
           </article>
         </div>
       </section>
-      <section id="blanc" class="section">
+      <section id="blanc" class="section b3">
         <div class="overlay"></div>
       </section>
     </main>
