--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- social media meta -->
+    <meta property="og:url" content="https:hep.dz" />
+    <meta property="og:title" content="" />
+    <meta property="og:description" content="" />
+    <meta property="og:image" content="" />
+    <!-- social media meta -->
+    <!-- seo meta -->
+    <meta name="description" content="" />
+    <meta name="keywords" content="" />
+    <!-- seo meta -->
+    <!-- webite icon -->
+    <link rel="shortcut icon" href="./img/icon.png" />
+    <!-- webite icon -->
     <title>HEP DZ</title>
     <script
       src="https://kit.fontawesome.com/018cd19312.js"
@@ -23,7 +36,7 @@
           <li class="nav_links"><a href="#Contact">Contact</a></li>
         </ul>
       </nav>
-      <a class="boutique" href="#">Boutique</a>
+      <a class="boutique" href="https://hep-dz.com/">Boutique</a>
     </header>
     <main>
       <section id="Accueil" class="section">
@@ -90,7 +103,7 @@
                   pour la métallurgie.
                 </p>
               </article>
-              <a class="boutique" href="#">Boutique</a>
+              <a class="boutique" href="https://hep-dz.com/">Boutique</a>
               <ul class="variantes">
                 <li><img src="./img/METABO_V1.jpeg" alt="variantes" /></li>
                 <li><img src="./img/METABO_V2.jpeg" alt="variantes" /></li>
@@ -119,7 +132,7 @@
                   construction, foret).
                 </p>
               </article>
-              <a class="boutique" href="#">Boutique</a>
+              <a class="boutique" href="https://hep-dz.com/">Boutique</a>
               <ul class="variantes">
                 <li><img src="./img/STIHL_V1.jpeg" alt="variantes" /></li>
                 <li><img src="./img/STIHL_V2.jpeg" alt="variantes" /></li>
@@ -146,7 +159,7 @@
                   technique moderne de fabrication.
                 </p>
               </article>
-              <a class="boutique" href="#">Boutique</a>
+              <a class="boutique" href="https://hep-dz.com/">Boutique</a>
               <ul class="variantes">
                 <li><img src="./img/STABILA_V1.jpeg" alt="variantes" /></li>
                 <li><img src="./img/STABILA_V2.jpeg" alt="variantes" /></li>
@@ -170,7 +183,7 @@
                   (palans de treuils et de chariots).
                 </p>
               </article>
-              <a class="boutique" href="#">Boutique</a>
+              <a class="boutique" href="https://hep-dz.com/">Boutique</a>
               <ul class="variantes">
                 <li><img src="./img/HADEF_V1.jpeg" alt="variantes" /></li>
                 <li><img src="./img/HADEF_V2.jpeg" alt="variantes" /></li>
@@ -285,8 +298,8 @@
       </div>
       <div class="f_s4">
         <ul class="f_menu">
-          <li><a href="#">Voir la boutique</a></li>
-          <li><a href="#">News Letter</a></li>
+          <li><a href="https://hep-dz.com/">Voir la boutique</a></li>
+          <!-- <li><a href="#">News Letter</a></li> -->
         </ul>
       </div>
       <div class="f_s5">
