--- a/index.html
+++ b/index.html
@@ -306,13 +306,13 @@
         <hr />
         <ul class="social_media">
           <li>
-            <a href="#"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://www.facebook.com/HEProfessionnel"><i class="fab fa-facebook-square"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.instagram.com/eurl_hep/"><i class="fab fa-instagram"></i></a>
           </li>
           <li>
-            <a href="#"><i class="fab fa-linkedin"></i></a>
+            <a href="https://fr.linkedin.com/company/haddad-equipement-professionnel"><i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
         <p class="copyrights">
